syncdoc/tests/roundtrip/snapshots/config/roundtrip__helpers__docs_config.md.snap
---
source: syncdoc/tests/roundtrip/helpers.rs
expression: content
---
Configuration to acknowledge developer preferences as well as set defaults.

Specifically, we try to find an asterism.toml, and if present we load settings from there.
This provides wrapping width and file extension preferences.
