syncdoc/tests/roundtrip/snapshots/config/roundtrip__helpers__docs_config_Config.md.snap
---
source: syncdoc/tests/roundtrip/helpers.rs
expression: content
---
User preferences loaded from asterism.toml or falling back to defaults.
