syncdoc/tests/roundtrip/snapshots/config/roundtrip__helpers__docs_config_Config_file_extensions.md.snap
---
source: syncdoc/tests/roundtrip/helpers.rs
expression: content
---
File suffixes to match when scanning directories.
