syncdoc/tests/roundtrip/snapshots/config/roundtrip__helpers__docs_config_Config_load.md.snap
---
source: syncdoc/tests/roundtrip/helpers.rs
expression: content
---
Load configuration from asterism.toml if present.

# Panics

Panics if the default configuration cannot be parsed.
