syncdoc/tests/roundtrip/snapshots/config/roundtrip__helpers__docs_config_Config_wrap_width.md.snap
---
source: syncdoc/tests/roundtrip/helpers.rs
expression: content
---
Maximum line width for editor text wrapping.
